# rust-cookbook

./: Cargo.toml  README.html  book.toml  index.html  print.html
cli/: build.html  cli-tool.html  init.html  serve.html  test.html  watch.html
format/: config.html  format.html  mathjax.html  rust.html  summary.html
format/theme/: index-hbs.html  syntax-highlighting.html  theme.html
lib/: lib.html
misc/: contributors.html  introduction.html
src/: basics.md  intro.md
theme/: custom.css  custom.js
