[package]
name = "rust-cookbook"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
license = "MIT/Apache-2.0"
publish = false

build = "build.rs"

[dependencies]
bitflags = "0.9"
byteorder = "1.0"
base64 = "0.6"
clap = "2.25"
crossbeam = "0.2"
chrono = "0.3"
data-encoding = "2.0.0-rc.1"
error-chain = "0.10"
flate2 = "0.2.19"
hyper = "0.10"
petgraph = "0.4"
rand = "0.3"
rayon = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4.2"
url = "1.4"
reqwest = "0.6"
regex = "0.2"
log = "0.3"
env_logger = "0.4"
syslog = "3.2.0"
tar = "0.4.12"
tempdir = "0.3.5"
lazy_static = "0.2"
walkdir = "1.0.7"
log4rs = "0.7"
memmap = "0.5"
num = "0.1"
num_cpus = "1.5"
threadpool = "1.3"
select = "0.4"
image = "0.14"

[build-dependencies]
skeptic = { path = "/home/budziq/git/misc/rust/rust-skeptic/src/skeptic" }

[dev-dependencies]
skeptic = { path = "/home/budziq/git/misc/rust/rust-skeptic/src/skeptic" }
