[package]
name = "rust-cookbook"
version = "0.1.0"
authors = ["Brian Anderson <banderson@mozilla.com>"]
license = "MIT/Apache-2.0"
publish = false

build = "build.rs"

[dependencies]
ansi_term = "0.11.0"
base64 = "0.9"
bitflags = "1.0"
byteorder = "1.0"
cc = "1.0"
chrono = "0.4"
clap = "2.29"
crossbeam = "0.5"
crossbeam-channel = "0.3.9"
csv = "1.0"
data-encoding = "2.1.0"
error-chain = "0.12"
flate2 = "1.0"
glob = "0.2"
image = "0.20"
lazy_static = "1.0"
memmap = "0.7"
mime = "0.3"
nalgebra = "0.16.12"
ndarray = { version = "0.13", features = ["approx"] }
num = "0.2"
num_cpus = "1.8"
percent-encoding = "2.1"
petgraph = "0.4"
rand = "0.6"
rayon = "1.0"
regex = "1.0"
reqwest = "0.9"
ring = "0.13.0-alpha"
same-file = "1.0"
select = "0.4"
semver = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.12"
tempfile = "3.1"
threadpool = "1.6"
toml = "0.4"
unicode-segmentation = "1.2.1"
url = "2.1"
walkdir = "2.0"


[build-dependencies]
skeptic = { path = "../rust-skeptic/src/skeptic"}
walkdir = "2.0"

[dev-dependencies]
skeptic = { path = "../rust-skeptic/src/skeptic"}
walkdir = "2.0"
